update scala 3.9.0